--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
         "cordova-plugin-splashscreen": "5.0.2",
         "cordova-plugin-whitelist": "1.3.3",
         "monaca-plugin-monaca-core": "3.3.0",
-        "cordova-plugin-dialogs": "2.0.1"
+        "cordova-plugin-dialogs": "2.0.1",
+        "cordova-plugin-camera": "4.0.3",
+        "phonegap-plugin-barcodescanner": "8.1.0",
+        "cordova-plugin-network-information": "2.0.1"
     },
     "cordova": {
         "plugins": {
@@ -14,7 +17,10 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-whitelist": {},
             "monaca-plugin-monaca-core": {},
-            "cordova-plugin-dialogs": {}
+            "cordova-plugin-dialogs": {},
+            "cordova-plugin-camera": {},
+            "phonegap-plugin-barcodescanner": {},
+            "cordova-plugin-network-information": {}
         }
     },
     "scripts": {
